[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/DarkTheme/Dark.theme" type="Theme" id=1]
[ext_resource path="res://Scripts/menu_lose.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/Hop.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sounds/Peck.wav" type="AudioStream" id=4]

[node name="Lose Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 76.0
margin_top = 61.0
margin_right = 233.0
margin_bottom = 125.0
theme = ExtResource( 1 )
text = "
  You're Drumsticks!"
scroll_active = false

[node name="Replay Button" type="Button" parent="."]
margin_left = 787.0
margin_top = 350.0
margin_right = 973.0
margin_bottom = 414.0
theme = ExtResource( 1 )
text = "Try Again!"

[node name="Back to Menu Button" type="Button" parent="."]
margin_left = 787.0
margin_top = 431.0
margin_right = 973.0
margin_bottom = 495.0
theme = ExtResource( 1 )
text = "Back to Menu"

[node name="Quit Button" type="Button" parent="."]
margin_left = 787.0
margin_top = 513.0
margin_right = 973.0
margin_bottom = 577.0
theme = ExtResource( 1 )
text = "Give Up (Quit Game)"

[node name="AudioClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioQuit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="Replay Button" to="." method="_on_Replay_Button_pressed"]
[connection signal="pressed" from="Back to Menu Button" to="." method="_on_Back_to_Menu_Button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_Quit_Button_pressed"]
